# act-axion-analysis

./: .gitignore  LICENSE.txt  README.md  README.rst  pyproject.toml
act_axion_analysis/: __init__.py  axion_osc_analysis_depth1_ps.py  axion_osc_plotting.py  timestream_analysis.py  utils.py
notebooks/: 20231218_all_73_depth1_maps_analysis.ipynb  array_diff_larger_set_20250124.ipynb  array_diff_larger_set_corr_mode_count_20241212.ipynb  array_diff_larger_set_w2_and_w2w4_higherell_largerbins_20250207.ipynb  array_diff_larger_set_w2_and_w2w4_higherell_smallerbins_20250208.ipynb  array_diff_larger_set_w2w4_20250201.ipynb  array_diff_larger_set_w2w4_higherell_20250203.ipynb  array_diff_larger_set_w2w4_higherell_largerbins_20250203.ipynb  array_differences_larger_depth1_set_20241125.ipynb  calibration_factor_test_01_20250208.ipynb  calibration_factor_test_02_20250210.ipynb  calibration_factor_test_03_20250211.ipynb  calibration_factor_test_20250208.ipynb  data_quality_f090_test_20250203.ipynb  data_quality_ivar_w_galmask_20241021.ipynb  data_quality_larger_depth1_map_set_20241107.ipynb  data_quality_larger_set_20250124.ipynb  data_quality_larger_set_corrected_mode_count_20241212.ipynb  data_quality_larger_set_w2_and_w2w4_higherell_largerbins_20250207.ipynb  data_quality_larger_set_w2_and_w2w4_higherell_smallerbins_20250208.ipynb  data_quality_larger_set_w2w4_20250201.ipynb  data_quality_larger_set_w2w4_higherell_20250203.ipynb  data_quality_larger_set_w2w4_higherell_largerbins_20250203.ipynb  healpy_only_mask_test_01_20240215.ipynb  healpy_only_mask_test_03_20240305.ipynb  (+22 more)
(+22 files in other folders)
